--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "MongoDbSettings": {
-    "connectionString": "ueaudheuhda",
-    "databaseName":  "myDatabase"
+    "connectionId": "SignIn",
+    "connectionString": "mongodb://localhost:27017",
+    "databaseName": "UserRegistry"
   }
 }
