--- a/src/Domain/Wallet.Registration.Domain.csproj
+++ b/src/Domain/Wallet.Registration.Domain.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="FluentValidation" Version="11.9.1" />
     <PackageReference Include="MediatR" Version="12.3.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0" />
+    <PackageReference Include="MongoDB.Bson" Version="2.27.0" />
   </ItemGroup>
 
   <ItemGroup>
